@@ -1,4 +1,5 @@
 0.7.0 (currently working on)
+- [#1931] Feature: Add SQL and TCA for the new prices
 - [#1914] Change: Build all redirection links and links in e-mails using cObj->typoLink_URL
 - [#1918] Feature: Add Switch to allow registration on events without a date
 - [#1908] Fix: Registration for event not possible if umlauts in fe-user "Name" field
